[package]
name = "clack"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "A scoped signal forwarder."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/clack"
homepage = "https://github.com/Tamschi/clack/tree/v0.0.1"
documentation = "https://docs.rs/clack/0.0.1"
keywords = [] #TODO
categories = [] #TODO
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[lib]

[[bin]]
name = "clack-test"
path = "clack-test/main.rs"
required-features = ["clack-test"]
doc = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/clack" }
is-it-maintained-open-issues = { repository = "Tamschi/clack" }
maintenance = { status = "experimental" } # This may differ between branches.

[features]
clack-test = ["structopt"]

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.28"

[dependencies]
structopt = { version = "0.3.23", optional = true }
