[package]
name = "mirror-mask"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "A scoped signal forwarder."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/mirror-mask"
homepage = "https://github.com/Tamschi/mirror-mask/tree/v0.0.1"
documentation = "https://docs.rs/mirror-mask/0.0.1"
keywords = [] #TODO
categories = [] #TODO
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[lib]

[[bin]]
name = "mirror-mask-test"
path = "mirror-mask-test/main.rs"
required-features = ["mirror-mask-test"]
doc = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/mirror-mask" }
is-it-maintained-open-issues = { repository = "Tamschi/mirror-mask" }
maintenance = { status = "experimental" } # This may differ between branches.

[features]
default = ["required"]
mirror-mask-test = ["structopt"]
required = []

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.4"
wasm-bindgen-test = "0.3.34"

[dependencies]
structopt = { version = "0.3.26", optional = true }

[target."cfg(unix)".dependencies]
nix = "0.25.0"
